distribution/kubernetes/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki
        app.kubernetes.io/component: database
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.4.1
          volumeMounts:
            - mountPath: /etc/loki/
              name: config
      volumes:
        - name: config
          configMap:
            name: loki
            items:
              - key: config
                path: local-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: loki
  ports:
    - port: 3100
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: loki
                port:
                  number: 3100
            pathType: Prefix
            path: /
      host: loki.com
