distribution/kubernetes/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: vertex-headless
spec:
  clusterIP: None
  ports:
    - port: 9100
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vertex
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: vertex-headless
                port:
                  number: 9100
            pathType: Prefix
            path: /metrics
